# fox_and_hound

./: CMakeLists.txt  README  content_license.txt  gpg_public_key.ascm  some_statistics
base_files/: passwd_base  passwd_base_sort  shadow_base  shadow_base_sort
build_scripts/: blame  build_functions  change_users_passwords  compile_programs  compress_all_files  dir_maker  generate_all_flags  givemethepin  make_bunch_dirs  make_hound0  make_hound1  make_hound10  make_hound11  make_hound12  make_hound13  make_hound14  make_hound15  make_hound16  make_hound17  make_hound18  make_hound2  make_hound3  make_hound4  make_hound5  make_hound6  make_hound7  make_hound8  make_hound9  make_hound_99  make_hound_tmp  make_houndff  make_passwords  mv_all_txz  mv_c_programs  mv_home_folders  reset_ctf  the_flags  the_passwords  tmp.c  update_build_number  (+1 more)
c_programs/: b32_encoder.c  b64_encoder.c  b64_tester.c  flag_exchanger.c  functions.c  functions.h  givemethepin-edited.c  givemethepin.c  givemethestring-.c  givemethestring-edited.c  givemethestring.c  select_the_flag_array.c  setuid.c  test_b64.c  xor_rand.c  xor_rand.h
dict/: 8char_word_dict  fox_dict  hound_dict  names_dict  passwords_dict
dictionaries/: hound_dict
etc/: sshd_config
notes/: COCOMO_August_10_2019_17_09_17_328547.txt  COCOMO_August_31_2019_22_07_27_536418.txt  M_logo_banner  flag_headers.txt  flag_information.sh  flag_word_arrays  fox_head_mockup  header_banner_smushed  header_info  hound.sh  m_logo_colorized_and_parsed  notes  vms_information
programs/: 8ball  awk_checker  bash_number_guesser  blame  (+19 more)
(+160 files in other folders)
